# oxidize-docx

./: .gitignore  Cargo.toml  LICENSE
docs/: ROADMAP.md
docs/superpowers/plans/: 2026-07-02-align-rag-chunking-with-oxidize-pdf.md
docs/superpowers/specs/: 2026-07-02-align-rag-chunking-with-oxidize-pdf-design.md
oxidize-docx-core/: Cargo.toml
oxidize-docx-core/src/: document.rs  error.rs  lib.rs
oxidize-docx-core/src/images/: extractor.rs  metadata.rs  mod.rs
oxidize-docx-core/src/numbering/: defs.rs  mod.rs  resolver.rs
oxidize-docx-core/src/ooxml/: content_types.rs  mod.rs  relationships.rs
oxidize-docx-core/src/pipeline/: chunk_metadata.rs  classifier.rs  element.rs  export.rs  hybrid.rs  list_builder.rs  mod.rs  profile.rs  rag.rs  table_builder.rs
oxidize-docx-core/src/raw/: body.rs  drawing.rs  fields.rs  mod.rs  paragraphs.rs  runs.rs  tables.rs
oxidize-docx-core/src/styles/: formatting.rs  mod.rs  resolver.rs  table.rs
oxidize-docx-core/src/word/: comments_xml.rs  document_xml.rs  endnotes_xml.rs  footnotes_xml.rs  mod.rs  notes_common.rs  numbering_xml.rs  styles_xml.rs
oxidize-docx-core/src/xml/: entity_guard.rs  mod.rs  namespace.rs  reader.rs
oxidize-docx-core/src/zip/: mod.rs  security.rs
oxidize-docx-core/tests/: document_elements.rs  document_images.rs  document_open.rs  document_rag.rs
oxidize-docx-core/tests/fixtures/: quarterly_report.docx
