[workspace]
members = ["oxidize-docx-core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
authors = ["Santiago Fernández Muñoz"]
license = "MIT"
repository = "https://github.com/bzsanti/oxidize-docx"

[workspace.dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.39", features = ["serialize"] }
zip = "2"
flate2 = "1.0"
tracing = "0.1"
rayon = "1.8"
image = { version = "0.25", default-features = false }
tempfile = "3.0"
pretty_assertions = "1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 1
